--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "arcade",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
     "build": "node generate.js"
-  }
+  },
+  "dependencies": {}
 }
