--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -31,3 +31,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Update game JSON data"
+          add_all: true    # <-- This stages all changes, including deletions
