--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "validate": "node scripts/validate-games.js",
     "sync-data": "node scripts/update-data.js",
     "cleanup": "node scripts/cleanup-orphaned-pages.js",
-    "merge-html": "node scripts/merge-split-html.js",
-    "update-all": "npm run merge-html && npm run sync-data && npm run cleanup && npm run validate && npm run build",
+    "update-all": "npm run sync-data && npm run cleanup && npm run validate && npm run build",
     "clean": "rm -rf dist/",
     "prebuild": "npm run validate",
     "dev": "npm run build && npx serve dist -p 3000",
