--- a/data/Burrito Bison Launcha Libre.json
+++ b/data/Burrito Bison Launcha Libre.json
@@ -1,6 +1,6 @@
 {
   "name": "Burrito Bison Launcha Libre",
-  "category": "Arcade, Action",
+  "category": "Arcade, Action, Mobile",
   "createdAt": "1970-01-01T00:00:00.000Z",
   "description": "",
   "displayName": "Burrito Bison Launcha Libre"
